kube/collector-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: auto
  name: otel-collector-deployment
  labels:
    app: otel-collector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: otel-collector
  template:
    metadata:
      labels:
        app: otel-collector
    spec:
      containers:
      - name: otel-collector
        image: otel/opentelemetry-collector-contrib:0.75.0
        ports:
        - containerPort: 4317
        volumeMounts:
        - name: otel-config-volume
          mountPath: /etc/otelcol-contrib/config.yaml
          subPath: otel-collector-config.yml
      volumes:
      - name: otel-config-volume
        configMap:
          name: otel-config
