kube/loki-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: auto
  name: auto-loki-deployment
  labels:
    app: loki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loki
  template:
    metadata:
      labels:
        app: loki
    spec:
      containers:
      - name: loki
        image: grafana/loki:2.8.0
        ports:
        - containerPort: 3100
