kube/prometheus-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: auto
  name: auto-prometheus-deployment
  labels:
    app: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
      - name: prometheus
        image: prom/prometheus
        ports:
        - containerPort: 9090
        volumeMounts:
        - name: prometheusdatasourse
          mountPath: /etc/prometheus/prometheus.yml
          subPath: prometheus-config.yml
      volumes:
      - name: prometheusdatasourse
        configMap:
          name: prometheus-config
