kube/prometheus-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: auto
  name: prometheus-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: prometheus.fngauto.duckdns.org 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-service
            port:
              number: 9090
