kube/web-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: auto
  name: blazor-web-ingress
  annotations:
    cert-manager.io/cluster-issuer: cert-manager-webhook-duckdns-seth-production
spec:
  tls:
  - hosts:
    - fngauto.duckdns.org
    secretName: seth2-kube-tls-production
  ingressClassName: nginx  # This should be at the same level as tls
  rules:
  - host: fngauto.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blazor-web-service
            port:
              number: 80
